fix: ensure mergeCategories includes newly created category